--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 </nav>
 <br>
 <div class="container">
-    <div class="jumbotron">
+    <div class="router-outlet">
         <router-outlet></router-outlet>
     </div>
 </div>
