--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -1,39 +1,44 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-6">
-            <div class="form-group">
-                
-                <label for="sel1">Seleccione el tipo de idea:</label>
-                    <select class="form-control" id="sel1" [(ngModel)] = "selectedValueTipo">
-                        <option>Nueva</option>
-                        <option>Para continuar</option>
-                        <option>Para empezar</option>
-                        <option>Proyecto</option>
+            <!--<form novalidate (ngSubmit) = "crearIdea()" [formGroup] = "ideaForm">-->
+                <div class="form-group">
+                    
+                    <label for="sel1">Seleccione el tipo de idea:</label>
+                    <select class="form-control" id="sel1" [(ngModel)] = "selectedValueTipo" [ngModelOptions]="{standalone: true}">
+                        <option value="NU">Nueva</option>
+                        <option value="PC">Para continuar</option>
+                        <option value="PE">Para empezar</option>
+                        <option value="PR">Proyecto</option>
                     </select>
-            </div>
-        
-            <div class="form-group">
-                <h4>Contenido</h4>
-                <textarea class="form-control" rows="5" id="contenido"></textarea>
-            </div >
+                </div>
+            
+                <div class="form-group">
+                    <h4>Contenido</h4>
+                    <textarea class="form-control" rows="5" id="contenido"  
+                        [(ngModel)]="contenido"></textarea>
+                </div >
 
-            <div class="form-group" *ngIf = "selectedValueTipo == 'Para continuar' || selectedValueTipo == 'Para empezar'">
-                <label for="numero">Numero de estudiantes: </label>
-                <input class="form-control" type="number" id="numeroest" name="numeroest" [(ngModel)] = "numeroEstudiantes">        
-            </div>
+                <div class="form-group" *ngIf = "selectedValueTipo == 'Para continuar' || selectedValueTipo == 'Para empezar'">
+                    <label for="numeroest">Numero de estudiantes: </label>
+                    <input class="form-control" type="number" id="numeroest"  
+                        [(ngModel)] = "numeroEstudiantes">        
+                </div>
 
-            <div class="form-group" *ngIf = "selectedValueTipo == 'Para empezar'">
-                <label for="alcance">Alcance: </label>
-                <input class="form-control" type="text" id="alcance" name="alcance" [(ngModel)] = "alcance">
+                <div class="form-group" *ngIf = "selectedValueTipo == 'Para empezar'">
+                    <label for="alcance">Alcance: </label>
+                    <input class="form-control" type="text" id="alcance" [(ngModel)] = "alcance">
 
-                <label for="problematica">Problematica: </label>
-                <input class="form-control" type="text" id="problematica"name="problematica" [(ngModel)] = "problematica"> 
+                    <label for="problematica">Problematica: </label>
+                    <input class="form-control" type="text" id="problematica" 
+                        [(ngModel)] = "problematica"> 
 
-            </div>
-            <div class="form-group" *ngIf = "selectedValueTipo == 'Proyecto'">
-                <button type="button" class="btn">Agregar ideas</button>
-            </div>
-            <button type="button" class="btn btn-primary">Publicar</button>    
+                </div>
+                <div class="form-group" *ngIf = "selectedValueTipo == 'Proyecto'">
+                    <button type="button" class="btn">Agregar ideas</button>
+                </div>
+                <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
+            <!--</form>-->  
         </div>
             
     </div>
