--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="usuario">
+<div class="container" *ngIf="usuario && !isMyProfile">
     <div class="row">
         <div class="center">
             <div class="col-xs-4"></div>
@@ -181,4 +181,7 @@
             </div>
         </div>
     </div>
+</div>
+<div class="container" *ngIf="usuario && isMyProfile">
+    <myprofile [usuario]="usuario"></myprofile>
 </div>
